First working prototype